[tool.poetry]
name = "qmonus-plugin-builder"
version = "1.0.0"
description = "Qmonus-PluginBuilder"
authors = ["NTT Communications Corporation"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "5.4.1"
SQLAlchemy = "1.4.31"
jsonschema = "4.4.0"
Jinja2 = "3.0.3"
pysnmp = "4.4.12"
xmltodict = "0.12.0"
cryptography = "3.4.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.5.4"
mypy = "^0.971"
types-PyYAML = "^6.0.11"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src"]
exclude = ["src/qmonus_plugin_builder/init_files"]
python_version = 3.9
show_error_codes = true
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
